<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textViewPurchaseIntro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/purchase_text_benefits"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            >
            <TableRow>
                <TextView
                    android:text="@string/bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingEnd="7dp"
                    android:paddingStart="0dp"
                />
                <TextView
                    android:text="@string/benefit_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/bullet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingEnd="7dp"
                    android:paddingStart="0dp"
                />
                <TextView
                    android:text="@string/benefit_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textViewPrice"
            android:text="@string/purchase_text_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="10dp"
        />

        <TextView
            android:text="@string/purchase_text_trial"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
        />
    </LinearLayout>
</ScrollView>